# gridline

./: .gitignore  Cargo.toml  README.md  test_output
crates/gridline-core/: Cargo.toml  README.md
crates/gridline-core/src/: error.rs  lib.rs
crates/gridline-core/src/document/: eval.rs  io.rs  mod.rs  ops.rs  script.rs  state.rs
crates/gridline-core/src/storage/: csv.rs  md.rs  mod.rs  parser.rs  writer.rs
crates/gridline-engine/: Cargo.toml  README.md
crates/gridline-engine/src/: builtins.rs  lib.rs  plot.rs
crates/gridline-engine/src/engine/: cell.rs  cell_ref.rs  deps.rs  eval.rs  format.rs  mod.rs  preprocess.rs
examples/: #functions.rhai#  README.md  builtins.grid  default.rhai  default_functions.grid  functions.rhai  functions.rhai~  keymaps.toml  markdown_test.grid  markdown_test.md  plot.grid  plot.md  script_ops.grid  script_ops.rhai  test.csv  test.grid  test_csv_out.csv  vec_test.grid
src/: builtins.rs  core.rs~  default_functions.rs  error.rs  lib.rs  main.rs  main.rs~  plot.rs
src/core/: #io.rs#  eval.rs  io.rs  mod.rs  ops.rs  state.rs
src/engine/: cell.rs  cell_ref.rs  cycle.rs  deps.rs  eval.rs  format.rs  mod.rs  preprocess.rs
src/gui/: actions.rs  app.rs  clipboard.rs  input.rs  mod.rs  state.rs  ui.rs
src/storage/: csv.rs  md.rs  mod.rs  parser.rs  writer.rs
src/tui/: actions.rs  app.rs  help.rs  input.rs  keymap.rs  mod.rs  ui.rs
src/tui/keymap/: defaults.rs  mod.rs  parse.rs  types.rs
test/: simple.expected.md
tests/: command_mode.rs
tests/fixtures/: simple.expected.md  simple.grid
