[package]
name = "gridline-core"
version = "0.3.0"
edition = "2024"
authors = ["Ali Raheem"]
license = "MIT OR Apache-2.0"
description = "Gridline UI-agnostic document model and storage."

[lib]
name = "gridline_core"
path = "src/lib.rs"

[dependencies]
gridline-engine = { path = "../gridline-engine", version = "0.3.0" }

dashmap = "6"
rhai = { version = "1.24.0", features = ["sync"] }
thiserror = "2.0"
