[package]
name = "gridline-engine"
version = "0.3.0"
edition = "2024"
authors = ["Ali Raheem"]
license = "MIT OR Apache-2.0"
description = "Gridline spreadsheet engine (Rhai formulas, preprocessing, builtins)."

[lib]
name = "gridline_engine"
path = "src/lib.rs"

[dependencies]
rhai = { version = "1.24.0", features = ["sync"] }
regex = "1"
dashmap = "6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
chrono = "0.4"
